--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-¼òµ¥ËµÃ÷:
+ç®€å•è¯´æ˜:
 
-Æ¤·ôÂ·¾¶: modules\gateways\class\alipay_full\skin\default
+çš®è‚¤è·¯å¾„: modules\gateways\class\alipay_full\skin\default
 
-Ö±½Ó½«modules¸²¸Çµ½whmcs¸ùÄ¿Â¼ÏÂ¼´¿É
+ç›´æ¥å°†modulesè¦†ç›–åˆ°whmcsæ ¹ç›®å½•ä¸‹å³å¯
